--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -31,7 +31,7 @@ RUN \
 
 # set version for s6 overlay
 ARG S6_OVERLAY_VERSION="3.1.6.2"
-ARG S6_OVERLAY_ARCH="aarch64"
+ARG S6_OVERLAY_ARCH="armhf"
 
 # add s6 overlay
 ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-noarch.tar.xz /tmp
